# ww1_map

./: .gitignore  README.md  events.json  main.py  output à vérifier.json  pyproject.toml  requirements.txt  testtofail.json  tiny-db-events-h copy.json  tiny-db-events-h.json  tiny-db-events-h2 copy.json  tiny-db-events-h2.json  tiny-db-events-h3.json  tiny-db-events-h4.json  tiny-db-events-h5.json  tiny-db-events-h6.json  tiny-db-events-h7 copy.json  tiny-db-events-h7.json  tiny-db-events.json
data_processing/: pyproject.toml
data_processing/common/: pyproject.toml
data_processing/common/src/common/: __init__.py  gemini_client.py  get_document_page.py  google_maps_client.py  mongo_client.py
data_processing/events_location_finder/: README.md  pyproject.toml
data_processing/events_location_finder/src/events_location_finder/: __init__.py  utils.py
data_processing/events_location_finder/src/events_location_finder/prompts/: find_military_event_location_instruction.txt  find_troup_mouvement_location_instruction.txt
data_processing/events_location_finder/src/events_location_finder/services/: events_service.py  regiments_service.py
data_processing/events_location_finder/src/events_location_finder/tools/: __init__.py  address_to_coordinates.py  coordinates_to_images.py  web_search_tool.py
data_processing/process_regiments_from_argonnaute/: README.md  fetch_pages.py  pyproject.toml  regiments_complet.json  regiments_list.json  store_regiment_in_db.py
data_processing/tools/extract_events_from_document/: README.md  pyproject.toml
data_processing/tools/extract_events_from_document/src/extract_events_from_document/: extract_logic.py  get_document_page.py  main.py
data_processing/tools/extract_events_from_document/src/extract_events_from_document/prompts/: create_regiment_description_instruction.txt  extract_events_instruction.txt  remove_duplicate_events_instructions.txt
data_processing/tools/extract_events_from_document/src/extract_events_from_document/services/: __init__.py  events_service.py  regiments_service.py
data_processing/tools/extract_events_from_document/src/extract_events_from_document/utils/: str_date_to_datetime.py
data_processing/tools/extract_events_from_document/tests/: test_extract_pages.py
data_processing/tools/lamber93_to_latlong/: README.md  pyproject.toml
data_processing/tools/lamber93_to_latlong/src/lamber93_to_latlong/: __init__.py
data_processing/tools/pdf_to_markdown/: pyproject.toml
data_processing/tools/pdf_to_markdown/src/pdf_to_markdown/: cli_pdf_to_markdown.py  start_extraction.py
documents/regiments/markdown/: Historique du 10ème régiment d'infanterie.md  Historique du 11ème régiment d'infanterie.md  Historique du 15ème régiment d'infanterie.md  Historique du 16ème régiment d'infanterie.md  Historique du 18eme régiment d'infanterie.md  Historique du 18ème régiment d'infanterie.md  Historique du 1er régiment d'infanterie.md  Historique du 2ème régiment d'infanterie.md  Historique du 4ème régiment d'infanterie.md  Historique du 5ème régiment d'infanterie.md  Historique du 6ème régiment d'infanterie.md  Historique du 7ème régiment d'infanterie.md  Historique du 8ème régiment d'infanterie.md  Historique du 9ème régiment d'infanterie.md
flutter_app/: .gitignore  README.md  pubspec.yaml
flutter_app/assets/translations/: en.json  fr.json
flutter_app/lib/: main.dart
flutter_app/lib/common_widgets/: centered_message.dart  common_widgets_export.dart  customs_snackbars.dart  loading_circle.dart
flutter_app/lib/core/: app_colors.dart  colors.dart  theme.dart
flutter_app/lib/routing/: actual_route_provider.dart  router.dart  routes_name.dart
flutter_app/lib/utils/: duration_formatter.dart  exceptions.dart  has_nested_property.dart  provider_observer.dart  textfield_state.dart  tr_entry.dart
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
multi_tool_agent/: __init__.py  agents_sessions.db  pyproject.toml
multi_tool_agent/adk_web/: tiny-db-events.json
multi_tool_agent/adk_web/test_event_extractor_agent_tool/: agent.py
multi_tool_agent/adk_web/test_event_extractor_manager_agent/: agent.py
multi_tool_agent/adk_web/test_issue_sample/: agent.py
multi_tool_agent/adk_web/test_store_events_in_db_agent/: agent.py
multi_tool_agent/entity_extractor_agent/: entities_extractor_agent.py
multi_tool_agent/events_extractor_agent/: event_extractor.py
multi_tool_agent/src/: config.py
multi_tool_agent/src/multi_tool_agent/: __init__.py  main.py
multi_tool_agent/src/multi_tool_agent/entity_extractor_agent/: entities_extractor_agent.py
multi_tool_agent/src/multi_tool_agent/events_extractor_agent/: events_tools.py
multi_tool_agent/src/multi_tool_agent/events_extractor_manager_agent/agents/: end_extraction_agent.py  event_extractor_agent_tool.py  event_extractor_manager_agent.py  remove_duplicate_events_agent.py  store_events_in_db_agent.py
multi_tool_agent/src/multi_tool_agent/events_extractor_manager_agent/tools/: get_city.py  set_extracted_events.py  store_event_in_db.py  str_date_to_datetime.py
multi_tool_agent/src/multi_tool_agent/tools/: exit_loop.py
multi_tool_agent/src/multi_tool_agent/utils/: calculate_model_call_size.py
multi_tool_agent/tests/: test_extract_pages.py
process_regiments_from_argonnaute/: 101.json  107.json  122.json  32.json  94.json  README.md  extract_regiments.violentmonkey.js  fetch_pages.py  pyproject.toml  regiments_complet.json  regiments_complet_failed.json  regiments_complet_medias.json  regiments_list_failed.json  store_regiment_in_db.py
prompts/: page_to_text.txt
tools/common/: pyproject.toml
tools/common/src/common/: file_reader.py
tools/extract_events_from_document/: README.md  adk_agents_pyproject.toml  config.py  pyproject.toml  remove_duplicate_events_agent.py  store_events_in_db_agent.py
tools/extract_events_from_document/agents/: end_extraction_agent.py  (+3 more)
tools/pdf_to_markdown/: cli_pdf_to_markdown.py  config.py  pyproject.toml
tools/utils/: README.md  pyproject.toml
(+86 files in other folders)
