[project]
name = "ww1-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "tools/pdf_to_markdown",
    "tools/extract_events_from_document",
    "process_regiments_from_argonnaute",
]
