[project]
name = "data_processing"
version = "0.1.0"
description = "Extract infos from documents and build the database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "process_regiments_from_argonnaute",
    "events_location_finder",
    "common",
    "tools/pdf_to_markdown",
    "tools/extract_events_from_document",
    "tools/lamber93_to_latlong",
]
