[project]
name = "common"
version = "0.1.0"
description = "Functions used across the project"
readme = "README.md"
authors = [
    { name = "Cyril Mammar", email = "mammar.cyril@epitech.eu" }
]
requires-python = ">=3.12"
dependencies = [
    "dnspython>=2.7.0",
    "pymongo>=4.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
