[project]
name = "process-regiments-from-argonnaute"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pymongo>=4.13.0",
    "dotenv>=0.9.9",
    "common"
]

[tool.uv.sources]
common = { workspace = true }