[project]
name = "lamber93-to-latlong"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cyril Mammar", email = "mammar.cyril@epitech.eu" }
]
requires-python = ">=3.12"
dependencies = [
    "pyproj>=3.7.1",
]

[project.scripts]
lamber93-to-latlong = "lamber93_to_latlong:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
